--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       height: 100%;
     }
 
-    .header {
+    .t-header {
       position: fixed;
       top: 0;
       left: 0;
@@ -104,7 +104,7 @@
       position: relative;
     }
 
-    .header .container {
+    .t-header .container {
       display: -webkit-box;
       display: -ms-flexbox;
       display: flex;
@@ -113,7 +113,7 @@
       align-items: center;
     }
 
-    .header__title, .header__hover-block {
+    .t-header__title, .t-header__hover-block {
       margin: 0;
       font-weight: 700;
       font-size: 30px;
@@ -121,13 +121,13 @@
       color: white;
     }
 
-    .header__title {
+    .t-header__title {
       -webkit-box-flex: 1;
       -ms-flex: auto;
       flex: auto;
     }
 
-    .header__hover-block {
+    .t-header__hover-block {
       position: absolute;
       top: 50%;
       left: 50%;
@@ -147,14 +147,14 @@
       margin: 0 auto;
     }
 
-    .main {
+    .t-main {
       -webkit-box-flex: 1;
       -ms-flex: 1 1 100%;
       flex: 1 1 100%;
       padding: 85px 0 50px;
     }
 
-    .main__list {
+    .t-main__list {
       display: -webkit-box;
       display: -ms-flexbox;
       display: flex;
@@ -164,7 +164,7 @@
       list-style-type: none;
     }
 
-    .main__item {
+    .t-main__item {
       -webkit-box-flex: 1;
       -ms-flex: 1 1 calc((100% / 4) - 30px);
       flex: 1 1 calc((100% / 4) - 30px);
@@ -173,14 +173,14 @@
       max-width: calc((100% / 4) - 30px);
     }
 
-    .main__article {
+    .t-main__article {
       display: flex;
       flex-direction: column;
       justify-content: space-between;
       height: 100%;
     }
 
-    .main__title {
+    .t-main__title {
       display: block;
       margin-bottom: 10px;
       width: 100%;
@@ -194,7 +194,7 @@
       transition: all var(--transition-fn);
     }
 
-    .main__link {
+    .t-main__link {
       position: relative;
       display: flex;
       padding-top: 115%;
@@ -209,7 +209,7 @@
       transition: all 350ms linear;
     }
 
-    .main__link img {
+    .t-main__link img {
       position: absolute;
       top: 0;
       left: 0;
@@ -227,11 +227,11 @@
       transition: all var(--transition-fn);
     }
 
-    .main__link--default {
+    .t-main__link--default {
       background-color: #fff;
     }
 
-    .main__link--default img {
+    .t-main__link--default img {
       display: block;
       max-width: 75%;
       margin: 0 auto;
@@ -241,46 +241,46 @@
       object-fit: contain;
     }
 
-    .main__link:hover,
-    .main__link:focus {
+    .t-main__link:hover,
+    .t-main__link:focus {
       box-shadow: 0 15px 20px -10px rgba(230, 85, 23, .8), 0 0 5px 0 rgba(230, 85, 23, .8);
       -webkit-box-shadow: var(--main-link-shadow-hover);
       box-shadow: var(--main-link-shadow-hover);
     }
 
-    .footer {
+    .t-footer {
       margin-bottom: 20px;
     }
 
-    .footer .container {
+    .t-footer .container {
       padding-top: 10px;
       padding-bottom: 10px;
     }
 
-    .footer__credits {
+    .t-footer__credits {
       font-size: 13px;
       font-weight: 500;
     }
 
-    .footer__credits span {
+    .t-footer__credits span {
       font-weight: 600;
     }
 
     @media screen and (max-width: 1023px) {
-      .main__item {
+      .t-main__item {
         -webkit-box-flex: 1;
         -ms-flex: 1 1 calc((100% / 3) - 30px);
         flex: 1 1 calc((100% / 3) - 30px);
         max-width: calc((100% / 3) - 30px);
       }
 
-      .header__hover-block {
+      .t-header__hover-block {
         display: none;
       }
     }
 
     @media screen and (max-width: 767px) {
-      .main__item {
+      .t-main__item {
         -webkit-box-flex: 1;
         -ms-flex: 1 1 100%;
         flex: 1 1 100%;
@@ -288,255 +288,254 @@
       }
     }
   </style>
-
 </head>
 <body class="page">
 
 <div class="page__inner">
-  <header class="header js-header">
+  <header class="t-header js-header">
     <div class="container">
-      <h1 class="header__title">Infinite Selection</h1>
-      <span class="header__hover-block js-content-paste"></span>
+      <h1 class="t-header__title">Infinite Selection</h1>
+      <span class="t-header__hover-block js-content-paste"></span>
     </div>
   </header>
 
-  <main class="main">
+  <main class="t-main">
     <div class="container">
-      <ul class="main__list js-content-hover">
+      <ul class="t-main__list js-content-hover">
         
-        <li class='main__item'>
-          <article class='main__article'>
-            <h2 class='main__title'>Authenticity Guarantee</h2>
+        <li class='t-main__item'>
+          <article class='t-main__article'>
+            <h2 class='t-main__title'>Home</h2>
             <a
-              class='main__link main__link--default'
-              href='./pages/authenticity-guarantee.html'
-              title='Authenticity Guarantee'
-              aria-label='Link to Authenticity Guarantee page.'
-            >
-              <img
-                src='./assets/previews/1000_default.svg'
-                alt='Preview image for Authenticity Guarantee.'
-                loading='lazy'
-              />
-            </a>
-          </article>
-        </li>
-        <li class='main__item'>
-          <article class='main__article'>
-            <h2 class='main__title'>Browse Sneakers</h2>
-            <a
-              class='main__link main__link--default'
-              href='./pages/browse-sneakers.html'
-              title='Browse Sneakers'
-              aria-label='Link to Browse Sneakers page.'
-            >
-              <img
-                src='./assets/previews/1000_default.svg'
-                alt='Preview image for Browse Sneakers.'
-                loading='lazy'
-              />
-            </a>
-          </article>
-        </li>
-        <li class='main__item'>
-          <article class='main__article'>
-            <h2 class='main__title'>404 - Not found</h2>
-            <a
-              class='main__link main__link--default'
-              href='./pages/contact-us.html'
-              title='404 - Not found'
-              aria-label='Link to 404 - Not found page.'
-            >
-              <img
-                src='./assets/previews/1000_default.svg'
-                alt='Preview image for 404 - Not found.'
-                loading='lazy'
-              />
-            </a>
-          </article>
-        </li>
-        <li class='main__item'>
-          <article class='main__article'>
-            <h2 class='main__title'>Create Account</h2>
-            <a
-              class='main__link main__link--default'
-              href='./pages/create-account.html'
-              title='Create Account'
-              aria-label='Link to Create Account page.'
-            >
-              <img
-                src='./assets/previews/1000_default.svg'
-                alt='Preview image for Create Account.'
-                loading='lazy'
-              />
-            </a>
-          </article>
-        </li>
-        <li class='main__item'>
-          <article class='main__article'>
-            <h2 class='main__title'>Sneakers Example</h2>
-            <a
-              class='main__link main__link--default'
-              href='./pages/example.html'
-              title='Sneakers Example'
-              aria-label='Link to Sneakers Example page.'
-            >
-              <img
-                src='./assets/previews/1000_default.svg'
-                alt='Preview image for Sneakers Example.'
-                loading='lazy'
-              />
-            </a>
-          </article>
-        </li>
-        <li class='main__item'>
-          <article class='main__article'>
-            <h2 class='main__title'>F.A.Q.</h2>
-            <a
-              class='main__link main__link--default'
-              href='./pages/faq.html'
-              title='F.A.Q.'
-              aria-label='Link to F.A.Q. page.'
-            >
-              <img
-                src='./assets/previews/1000_default.svg'
-                alt='Preview image for F.A.Q..'
-                loading='lazy'
-              />
-            </a>
-          </article>
-        </li>
-        <li class='main__item'>
-          <article class='main__article'>
-            <h2 class='main__title'>Home</h2>
-            <a
-              class='main__link main__link--default'
+              class='t-main__link'
               href='./pages/home.html'
               title='Home'
               aria-label='Link to Home page.'
             >
               <img
-                src='./assets/previews/1000_default.svg'
+                src='./assets/previews/01_home.jpg'
                 alt='Preview image for Home.'
                 loading='lazy'
               />
             </a>
           </article>
         </li>
-        <li class='main__item'>
-          <article class='main__article'>
-            <h2 class='main__title'>How We Clean</h2>
+        <li class='t-main__item'>
+          <article class='t-main__article'>
+            <h2 class='t-main__title'>Browse Sneakers</h2>
             <a
-              class='main__link main__link--default'
+              class='t-main__link'
+              href='./pages/browse-sneakers.html'
+              title='Browse Sneakers'
+              aria-label='Link to Browse Sneakers page.'
+            >
+              <img
+                src='./assets/previews/02_browse-sneakers.jpg'
+                alt='Preview image for Browse Sneakers.'
+                loading='lazy'
+              />
+            </a>
+          </article>
+        </li>
+        <li class='t-main__item'>
+          <article class='t-main__article'>
+            <h2 class='t-main__title'>How We Clean</h2>
+            <a
+              class='t-main__link'
               href='./pages/how-we-clean.html'
               title='How We Clean'
               aria-label='Link to How We Clean page.'
             >
               <img
-                src='./assets/previews/1000_default.svg'
+                src='./assets/previews/03_how-we-clean.jpg'
                 alt='Preview image for How We Clean.'
                 loading='lazy'
               />
             </a>
           </article>
         </li>
-        <li class='main__item'>
-          <article class='main__article'>
-            <h2 class='main__title'>Login</h2>
+        <li class='t-main__item'>
+          <article class='t-main__article'>
+            <h2 class='t-main__title'>Ways to Rent</h2>
             <a
-              class='main__link main__link--default'
-              href='./pages/login.html'
-              title='Login'
-              aria-label='Link to Login page.'
+              class='t-main__link'
+              href='./pages/ways-to-rent.html'
+              title='Ways to Rent'
+              aria-label='Link to Ways to Rent page.'
             >
               <img
-                src='./assets/previews/1000_default.svg'
-                alt='Preview image for Login.'
+                src='./assets/previews/04_ways-to-rent.jpg'
+                alt='Preview image for Ways to Rent.'
                 loading='lazy'
               />
             </a>
           </article>
         </li>
-        <li class='main__item'>
-          <article class='main__article'>
-            <h2 class='main__title'>Lost Password</h2>
+        <li class='t-main__item'>
+          <article class='t-main__article'>
+            <h2 class='t-main__title'>Authenticity Guarantee</h2>
             <a
-              class='main__link main__link--default'
-              href='./pages/lost-password.html'
-              title='Lost Password'
-              aria-label='Link to Lost Password page.'
+              class='t-main__link'
+              href='./pages/authenticity-guarantee.html'
+              title='Authenticity Guarantee'
+              aria-label='Link to Authenticity Guarantee page.'
             >
               <img
-                src='./assets/previews/1000_default.svg'
-                alt='Preview image for Lost Password.'
+                src='./assets/previews/05_authenticity-guarantee.jpg'
+                alt='Preview image for Authenticity Guarantee.'
                 loading='lazy'
               />
             </a>
           </article>
         </li>
-        <li class='main__item'>
-          <article class='main__article'>
-            <h2 class='main__title'>Privacy Policy</h2>
+        <li class='t-main__item'>
+          <article class='t-main__article'>
+            <h2 class='t-main__title'>Search</h2>
             <a
-              class='main__link main__link--default'
-              href='./pages/privacy-policy.html'
-              title='Privacy Policy'
-              aria-label='Link to Privacy Policy page.'
-            >
-              <img
-                src='./assets/previews/1000_default.svg'
-                alt='Preview image for Privacy Policy.'
-                loading='lazy'
-              />
-            </a>
-          </article>
-        </li>
-        <li class='main__item'>
-          <article class='main__article'>
-            <h2 class='main__title'>Search</h2>
-            <a
-              class='main__link main__link--default'
+              class='t-main__link'
               href='./pages/search.html'
               title='Search'
               aria-label='Link to Search page.'
             >
               <img
-                src='./assets/previews/1000_default.svg'
+                src='./assets/previews/06_search.jpg'
                 alt='Preview image for Search.'
                 loading='lazy'
               />
             </a>
           </article>
         </li>
-        <li class='main__item'>
-          <article class='main__article'>
-            <h2 class='main__title'>Terms of Service</h2>
+        <li class='t-main__item'>
+          <article class='t-main__article'>
+            <h2 class='t-main__title'>Sneakers Example</h2>
             <a
-              class='main__link main__link--default'
+              class='t-main__link'
+              href='./pages/product-single.html'
+              title='Sneakers Example'
+              aria-label='Link to Sneakers Example page.'
+            >
+              <img
+                src='./assets/previews/07_product-single.jpg'
+                alt='Preview image for Sneakers Example.'
+                loading='lazy'
+              />
+            </a>
+          </article>
+        </li>
+        <li class='t-main__item'>
+          <article class='t-main__article'>
+            <h2 class='t-main__title'>Privacy Policy</h2>
+            <a
+              class='t-main__link'
+              href='./pages/privacy-policy.html'
+              title='Privacy Policy'
+              aria-label='Link to Privacy Policy page.'
+            >
+              <img
+                src='./assets/previews/08_privacy-policy.jpg'
+                alt='Preview image for Privacy Policy.'
+                loading='lazy'
+              />
+            </a>
+          </article>
+        </li>
+        <li class='t-main__item'>
+          <article class='t-main__article'>
+            <h2 class='t-main__title'>Terms of Service</h2>
+            <a
+              class='t-main__link'
               href='./pages/terms-of-service.html'
               title='Terms of Service'
               aria-label='Link to Terms of Service page.'
             >
               <img
-                src='./assets/previews/1000_default.svg'
+                src='./assets/previews/09_terms-of-service.png'
                 alt='Preview image for Terms of Service.'
                 loading='lazy'
               />
             </a>
           </article>
         </li>
-        <li class='main__item'>
-          <article class='main__article'>
-            <h2 class='main__title'>Ways to Rent</h2>
+        <li class='t-main__item'>
+          <article class='t-main__article'>
+            <h2 class='t-main__title'>Login</h2>
             <a
-              class='main__link main__link--default'
-              href='./pages/ways-to-rent.html'
-              title='Ways to Rent'
-              aria-label='Link to Ways to Rent page.'
+              class='t-main__link'
+              href='./pages/account--login.html'
+              title='Login'
+              aria-label='Link to Login page.'
             >
               <img
-                src='./assets/previews/1000_default.svg'
-                alt='Preview image for Ways to Rent.'
+                src='./assets/previews/10_account--login.png'
+                alt='Preview image for Login.'
+                loading='lazy'
+              />
+            </a>
+          </article>
+        </li>
+        <li class='t-main__item'>
+          <article class='t-main__article'>
+            <h2 class='t-main__title'>Create Account</h2>
+            <a
+              class='t-main__link'
+              href='./pages/account--create.html'
+              title='Create Account'
+              aria-label='Link to Create Account page.'
+            >
+              <img
+                src='./assets/previews/11_account--create.png'
+                alt='Preview image for Create Account.'
+                loading='lazy'
+              />
+            </a>
+          </article>
+        </li>
+        <li class='t-main__item'>
+          <article class='t-main__article'>
+            <h2 class='t-main__title'>Lost Password</h2>
+            <a
+              class='t-main__link'
+              href='./pages/account--reset-password.html'
+              title='Lost Password'
+              aria-label='Link to Lost Password page.'
+            >
+              <img
+                src='./assets/previews/12_account--reset-password.png'
+                alt='Preview image for Lost Password.'
+                loading='lazy'
+              />
+            </a>
+          </article>
+        </li>
+        <li class='t-main__item'>
+          <article class='t-main__article'>
+            <h2 class='t-main__title'>F.A.Q.</h2>
+            <a
+              class='t-main__link'
+              href='./pages/faq.html'
+              title='F.A.Q.'
+              aria-label='Link to F.A.Q. page.'
+            >
+              <img
+                src='./assets/previews/13_faq.png'
+                alt='Preview image for F.A.Q..'
+                loading='lazy'
+              />
+            </a>
+          </article>
+        </li>
+        <li class='t-main__item'>
+          <article class='t-main__article'>
+            <h2 class='t-main__title'>404 - Not found</h2>
+            <a
+              class='t-main__link'
+              href='./pages/404.html'
+              title='404 - Not found'
+              aria-label='Link to 404 - Not found page.'
+            >
+              <img
+                src='./assets/previews/14_404.png'
+                alt='Preview image for 404 - Not found.'
                 loading='lazy'
               />
             </a>
@@ -546,9 +545,9 @@
     </div>
   </main>
 
-  <footer class="footer">
+  <footer class="t-footer">
     <div class="container">
-      <span class="footer__credits">Build date: <span class="js-build-date">сб, 4 сент. 2021 г., 01:00</span></span>
+      <span class="t-footer__credits">Build date: <span class="js-build-date">ср, 5 янв. 2022 г., 20:50</span></span>
     </div>
   </footer>
 </div>
@@ -583,6 +582,5 @@
     });
   });
 </script>
-
 </body>
 </html>
